[workspace]
resolver = "2"
members = [
    "crates/nullchain-crypto",
    "crates/nullchain-types", 
    "crates/nullchain-consensus",
    "crates/nullchain-network",
    "crates/nullchain-storage",
    "crates/nullchain-node",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NullChain Team <dev@nullchain.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Oblivionsage/nullchain"

[workspace.dependencies]
# Crypto
blake3 = "1.5"
ed25519-dalek = "2.1"
curve25519-dalek = "4.1"
rand = "0.8"
zeroize = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Networking
libp2p = "0.54"

# Database
rocksdb = "0.22"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1.5"
tempfile = "3.0"

# Utils
hex = "0.4"
