[package]
name = "nullchain-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
serde = { workspace = true }
nullchain-types = { path = "../nullchain-types" }
rand = "0.8"

[dev-dependencies]
hex = "0.4"
