[package]
name = "nullchain-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "nullchain"
path = "src/main.rs"

[dependencies]
nullchain-types = { path = "../nullchain-types" }
nullchain-crypto = { path = "../nullchain-crypto" }
nullchain-consensus = { path = "../nullchain-consensus" }

clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = "2.1"
